--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
  </p> 
  <p>
   <ul>
-   <li><a href="liens/roul.html" target="_blank">Apprendre à jouer à la roulette</a></li>
-   <li><a href="liens/masous.html" target="_blank">Apprendre à jouer aux machines à sous</a></li>
-	  <li><a href="liens/bljack.html" target="_blank">Apprendre à jouer au Black Jack</a></li>
+   <li><a href="roul.html" target="_blank">Apprendre à jouer à la roulette</a></li>
+   <li><a href="masous.html" target="_blank">Apprendre à jouer aux machines à sous</a></li>
+	  <li><a href="bljack.html" target="_blank">Apprendre à jouer au Black Jack</a></li>
   </ul>
  </p>
 <h3>Première immersion dans un casino : quelques conseils</h3>
@@ -57,14 +57,14 @@
 </footer> -->
   <section>
    <ul class="nav">
-    <li><a href="liens/masous.html" class="CL1"><img src="machinesous.png" width="40" height="40" alt="Machine à sous"</a></li>
-    <li><a href="liens/roul.html" class="CL1"><img src="roulette.png" width="40" height="40" alt="Roulette"</a></li>
-		  <li><a href="liens/bljack.html" class="CL1"><img src="blackjack.png" width="40" height="40" alt="black Jack"</a></li>
+    <li><a href="masous.html" class="CL1"><img src="machinesous.png" width="40" height="40" alt="Machine à sous"</a></li>
+    <li><a href="roul.html" class="CL1"><img src="roulette.png" width="40" height="40" alt="Roulette"</a></li>
+		  <li><a href="bljack.html" class="CL1"><img src="blackjack.png" width="40" height="40" alt="black Jack"</a></li>
    </ul>
   </section>  
    <ul class="nav">
-  	<li><a href="liens/about.html" class="CL1">A PROPOS</a></li>
-  	<li><a href="liens/mentions.html" class="CL1">Mentions légales</a></li>
+  	<li><a href="about.html" class="CL1">A PROPOS</a></li>
+  	<li><a href="mentions.html" class="CL1">Mentions légales</a></li>
 		 <li><a href="mailto:name@email.test" class="CL1">CONTACTS</a></li>
   </ul>
 <!--<hr>
