--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
  <h1 style="text-align:left"> Casino pour les nuls </h1>
  <h2 class="P0">
   <a class="IC1" href="masous.html" position="relative"><img src="machinesous.png" width="40" height="40" alt="Machine à sous">Machine à sous</a>
-  <a class="IC2" href="roul.html"><img src="Roulette.png" width="40" height="40" alt="Roulette">Roulette</a>
-  <a class="IC3" href="bljack.html"><img src="Blackjack.png" width="40" height="40" alt="black Jack">Black Jack</a>
+  <a class="IC2" href="roul.html" position="relative"><img src="roulette.png" width="40" height="40" alt="Roulette">Roulette</a>
+  <a class="IC3" href="bljack.html" position="relative"><img src="blackjack.png" width="40" height="40" alt="black Jack">Black Jack</a>
  </h2>
   <i fas class="IC1"></i>
   <i fas class="IC2"></i>
