--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 <title>Casino</title>
 <meta charset="utf-8"/>
-<link rel="stylesheet" href="Style.css"/>
+<link rel="stylesheet" href="style.css"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
  <h1 style="text-align:left"> Casino pour les nuls </h1>
  <h2 class="P0">
-  <a class="IC1" href="masous.html" position="relative"><img src="machinesous.png" width="40" height="40" alt="Machine à sous">Machine à sous</a>
-  <a class="IC2" href="roul.html" position="relative"><img src="roulette.png" width="40" height="40" alt="Roulette">Roulette</a>
-  <a class="IC3" href="bljack.html" position="relative"><img src="blackjack.png" width="40" height="40" alt="black Jack">Black Jack</a>
+  <a class="IC1" href="masous.html"><img src="machinesous.png" width="40" height="40" alt="Machine à sous">Machine à sous</a>
+  <a class="IC2" href="roul.html" ><img src="roulette.png" width="40" height="40" alt="Roulette">Roulette</a>
+  <a class="IC3" href="bljack.html" ><img src="blackjack.png" width="40" height="40" alt="black Jack">Black Jack</a>
  </h2>
   <i fas class="IC1"></i>
   <i fas class="IC2"></i>
