--- a/masous.html
+++ b/masous.html
@@ -3,7 +3,7 @@
 <head>
 <title>Casino</title>
 <meta charset="utf-8"/>
-<link rel="stylesheet" href="Style.css"/>
+<link rel="stylesheet" href="style.css"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
