--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 <title>Casino</title>
 <meta charset="utf-8"/>
-<link rel="stylesheet" href="Style.css"/>
+<link rel="stylesheet" href="style.css"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
- <h1 style="width=0;align=left"> Casino pour les nuls </h1>
+ <h1> Casino pour les nuls </h1>
  <h2 class="P0">
-  <a class="IC1" href="liens/masous.html" position="relative"><img src="machinesous.png" width="40" height="40" alt"="Machine à sous">Machine à sous</a>
-  <a class="IC2" href="liens/roul.html"><img src="Roulette.png" width="40" height="40" alt="Roulette">Roulette</a>
-  <a class="IC3" href="liens/bljack.html"><img src="Blackjack.png" width="40" height="40" alt="black Jack">Black Jack</a>
+  <a class="IC1" href="liens/masous.html" position="relative"><img src="machinesous.png" width="40" height="40" alt="Machine à sous">Machine à sous</a>
+  <a class="IC2" href="liens/roul.html"><img src="roulette.png" width="40" height="40" alt="">Roulette</a>
+  <a class="IC3" href="liens/bljack.html"><img src="blackjack.png" width="40" height="40" alt="">Black Jack</a>
  </h2>
   <i fas class="IC1"></i>
   <i fas class="IC2"></i>
