--- a/bljack.html
+++ b/bljack.html
@@ -12,9 +12,9 @@
  <a class="backhome" href="index.html">Casino pour les nuls</a>
 </h1>
  <h2 class="P0">
-  <a class="IC1" href="masous.html"><img src="machinesous.png" width="40" height="40" alt="Machine à sous">Machine à sous</a>
-  <a class="IC2" href="roul.html"><img src="roulette.png" width="40" height="40" alt="Roulette">Roulette</a>
-  <a class="IC3" href="bljack.html"><img src="blackjackgray.png" width="40" height="40" alt="black Jack">Black Jack</a>
+  <a class="IC1" href="masous.html"><img src="machinesous.png" width="40" height="40" alt="">Machine à sous</a>
+  <a class="IC2" href="roul.html"><img src="roulette.png" width="40" height="40" alt="">Roulette</a>
+  <a class="IC3" href="bljack.html"><img src="blackjackgray.png" width="40" height="40" alt="">Black Jack</a>
  </h2>
   <i fas class="IC1"></i>
   <i fas></i>
@@ -79,7 +79,7 @@
 		<ul class="nav">
    <li><a href="masous.html" class="CL1"><img src="machinesous.png" width="40" height="40" alt="Machine à sous"</a></li>:
    <li><a href="roul.html" class="CL1"><img src="roulette.png" width="40" height="40" alt="Roulette"</a></li>
-		 <li><a href="bljack.html" class="CL1"><img src="blackjack.png" width="40" height="40" alt="black Jack"</a></li>
+		 <li><a href="bljack.html" class="CL1"><img src="blackjack.png" width="40" height="40" alt="Black Jack"</a></li>
         </ul>
   </section>
  	<!--<hr>-->
