--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
  <h1 style="text-align:left"> Casino pour les nuls </h1>
  <h2 class="P0">
-  <a class="IC1" href="masous.html" position="relative"><img src="machinesous.png" width="40" height="40" alt="Machine à sous">Machine à sous</a>
-  <a class="IC2" href="roul.html"><img src="Roulette.png" width="40" height="40" alt="Roulette">Roulette</a>
-  <a class="IC3" href="bljack.html"><img src="Blackjack.png" width="40" height="40" alt="black Jack">Black Jack</a>
+  <a class="IC1" href="masous.html" position="relative"><img src="machinesous.png" width="40" height="40" alt="">Machine à sous</a>
+  <a class="IC2" href="roul.html"><img src="roulette.png" width="40" height="40" alt="">Roulette</a>
+  <a class="IC3" href="bljack.html"><img src="blackjack.png" width="40" height="40" alt="">Black Jack</a>
  </h2>
   <i fas class="IC1"></i>
   <i fas class="IC2"></i>
@@ -44,9 +44,9 @@
  </p> 
  <p>
   <ul>
-   <li><a href="liens/roul.html" target="_blank">Apprendre à jouer à la roulette</a></li>
-   <li><a href="liens/masous.html" target="_blank">Apprendre à jouer aux machines à sous</a></li>
-	  <li><a href="liens/bljack.html" target="_blank">Apprendre à jouer au Black Jack</a></li>
+   <li><a href="roul.html" target="_blank">Apprendre à jouer à la roulette</a></li>
+   <li><a href="masous.html" target="_blank">Apprendre à jouer aux machines à sous</a></li>
+	  <li><a href="bljack.html" target="_blank">Apprendre à jouer au Black Jack</a></li>
   </ul>
  </p>
 <h3>Première immersion dans un casino : quelques conseils</h3>
@@ -57,14 +57,14 @@
 </footer> -->
   <section>
    <ul class="nav">
-    <li><a href="liens/masous.html" class="CL1"><img src="machinesous.png" width="40" height="40" alt="Machine à sous"</a></li>
-    <li><a href="liens/roul.html" class="CL1"><img src="roulette.png" width="40" height="40" alt="Roulette"</a></li>
-		  <li><a href="liens/bljack.html" class="CL1"><img src="blackjack.png" width="40" height="40" alt="black Jack"</a></li>
+    <li><a href="masous.html" class="CL1"><img src="machinesous.png" width="40" height="40" alt="Machine à sous"</a></li>
+    <li><a href="roul.html" class="CL1"><img src="roulette.png" width="40" height="40" alt="Roulette"</a></li>
+		  <li><a href="bljack.html" class="CL1"><img src="blackjack.png" width="40" height="40" alt="black Jack"</a></li>
    </ul>
   </section>  
    <ul class="nav">
-  	<li><a href="liens/about.html" class="CL1">A PROPOS</a></li>
-  	<li><a href="liens/mentions.html" class="CL1">Mentions légales</a></li>
+  	<li><a href="about.html" class="CL1">A PROPOS</a></li>
+  	<li><a href="mentions.html" class="CL1">Mentions légales</a></li>
 		 <li><a href="mailto:name@email.test" class="CL1">CONTACTS</a></li>
   </ul>
 <!--<hr>
