--- a/masous.html
+++ b/masous.html
@@ -12,9 +12,9 @@
  <a class="backhome" href="index.html">Casino pour les nuls</a>
 </h1>
  <h2 class="P0">
-  <a class="IC1" href="masous.html"><img src="machinesousgray.png" width="40" height="40" alt="Machine à sous">Machine à sous</a>
-  <a class="IC2" href="roul.html"><img src="roulette.png" width="40" height="40" alt="Roulette">Roulette</a>
-  <a class="IC3" href="bljack.html"><img src="blackjack.png" width="40" height="40" alt="black Jack">Black Jack</a>
+  <a class="IC1" href="masous.html"><img src="machinesousgray.png" width="40" height="40" alt="">Machine à sous</a>
+  <a class="IC2" href="roul.html"><img src="roulette.png" width="40" height="40" alt="">Roulette</a>
+  <a class="IC3" href="bljack.html"><img src="blackjack.png" width="40" height="40" alt="">Black Jack</a>
  </h2>
   <i fas class="IC1"></i>
   <i fas></i>
