--- a/bljack.html
+++ b/bljack.html
@@ -63,7 +63,7 @@
   </p> 
   <h3>Etape 3 : le comptage de cartes</h3>
   <p class="P1">
-    voici l'étape que vous attendiez tous : le comptage de cartes. Il s'agit d'une stratégie qui repose sur le fait que le joueur a un avantage lorsqu'il reste beaucoup de cartes hautes dans le sabot. Ont dit alors que le sabot est chaud et il faut donc miser gros ! L'objectif du comptage de cartes va donc être de compter les cartes hautes qui sortent par opposition aux cartes basses. Pour information, il existe différentes techniques de comptages hi low, knock out, etc.
+    Voici l'étape que vous attendiez tous : le comptage de cartes. Il s'agit d'une stratégie qui repose sur le fait que le joueur a un avantage lorsqu'il reste beaucoup de cartes hautes dans le sabot. On dit alors que le sabot est chaud et il faut donc miser gros ! L'objectif du comptage de cartes va donc être de compter les cartes hautes qui sortent par opposition aux cartes basses. Pour information, il existe différentes techniques de comptages hi low, knock out, etc.
     Note : pour contrer les compteurs de cartes, les casinos ont mis en oeuvre différentes technique dont le mélangeur automatique (continuous shuffling machine). Le sabot étant mélangé à chaque coup, le comptage perd de son intérêt.
   <p/>
   <h3>Etape 4 : Un peu de culture Blackjack</h3>
